syntax = "proto2";
import "bsn_define/server_type.proto";
package bsn_msg_gate_server;
 

message SLoginReq {
	required uint32 id 							= 1; // 
	required bsn_define.EServerType serverType 	= 2; //
}

message SLoginRes {
	enum EResult { 
		Success 		= 0;
		SelfHadLogin 	= 1;
	}
	required EResult result 	= 1; // 
	required bsn_define.EServerType serverType 	= 2 [default = ServerType_Counts]; //
}

 